--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,24 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "fcd70f228a99c9d1",
+        "id": "f310e8ad83735dc2",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "hello/Habitos.md",
+            "file": "Templates/Note Template.md",
             "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "5c2291461ec1412a",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "hello/Habitos.md",
-            "mode": "preview"
           }
         }
       }
@@ -79,13 +68,13 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "hello/Habitos.md",
+                "file": "Templates/Note Template.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
-                "backlinkCollapsed": false,
+                "backlinkCollapsed": true,
                 "unlinkedCollapsed": true
               }
             }
@@ -97,12 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "fcd70f228a99c9d1",
+  "active": "f310e8ad83735dc2",
   "lastOpenFiles": [
-    "hello/something.md",
-    "Books/Personal MBA/Value Creation.md",
-    "Books/Personal MBA.md",
-    "Books/Shoe Dog.md",
-    "Untitled.md"
+    "Templates/Note Template.md",
+    "Fleeting Notes/compiler concepts.md",
+    "Permanent Notes/What are compilers.md",
+    "Permanent Notes/What compilers do.md",
+    "Fleeting Notes/Compilers.md",
+    "Fleeting Notes/semantic cube.md",
+    "Fleeting Notes/Untitled.md",
+    "Permanent Notes/Untitled.md",
+    "Templates/Map of Content.md",
+    "Books/Personal MBA/Value Creation.md"
   ]
 }
