--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "f310e8ad83735dc2",
+        "id": "8de48ee713242060",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Templates/Note Template.md",
+            "file": "Fleeting Notes/Ceneval Discrete Math.md",
             "mode": "source"
           }
         }
@@ -68,13 +68,13 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Templates/Note Template.md",
+                "file": "Fleeting Notes/Ceneval Discrete Math.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
-                "backlinkCollapsed": true,
+                "backlinkCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "f310e8ad83735dc2",
+  "active": "8de48ee713242060",
   "lastOpenFiles": [
-    "Templates/Note Template.md",
-    "Fleeting Notes/compiler concepts.md",
-    "Permanent Notes/What are compilers.md",
-    "Permanent Notes/What compilers do.md",
-    "Fleeting Notes/Compilers.md",
-    "Fleeting Notes/semantic cube.md",
+    "Fleeting Notes/Ceneval Discrete Math.md",
+    "Fleeting Notes/Cenveval EyAP.md",
     "Fleeting Notes/Untitled.md",
-    "Permanent Notes/Untitled.md",
-    "Templates/Map of Content.md",
-    "Books/Personal MBA/Value Creation.md"
+    "Fleeting Notes/Ceneval Information Systems.md",
+    "Fleeting Notes/Ceneval Operating Systems.md",
+    "Fleeting Notes/Ceneval Networking.md",
+    "Fleeting Notes/Ceneval DB Concepts.md",
+    "Pasted image 20211004115921.png",
+    "Fleeting Notes/Ceneval Basic Programing.md",
+    "Fleeting Notes/clase compiladores.md"
   ]
 }
